# tasy-o

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
src/api/: app.py  constants.py
src/api/models/: app_config.py
src/exercises/maths/: numbers_to_text.py  perfect_numbers.py
src/tasy_o/api/: app.py  config.py  constants.py  validators.py
src/tasy_o/api/models/: app_config.py
src/tasy_o/exercises/maths/: calc_sum_and_count.py  maths_router.py  numbers_to_text.py  perfect_numbers.py
src/tasy_o/models/: app_config.py  maths.py
tests/integration/: conftest.py  test_calc_sum_count.py  test_numbers_into_text.py  test_perfect_numbers.py
tests/unit/mappings/: conftest.py  test_maths.py
tests/unit/maths/: test_numbers_to_text.py  test_perfect_numbers.py
