[project]
name = "tasy-o"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "pathlib>=1.0.1",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "trio>=0.29.0",
    "uvicorn>=0.34.0",
]
